--- a/instructions.html
+++ b/instructions.html
@@ -102,7 +102,7 @@
         <div class="line-horizontal-hint"></div>
         <div class="hint-2-container">
           <span>Hint :</span>
-          <span class="cant-return-to"> -2 min</span>
+          <span class="cant-return-to"> -2 pts</span>
           <span> from Remaining Time</span>
         </div>
       </div>
