added questions for day 2

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         localStorage['hardTime']='';
         localStorage['hintCount'] = 0;
         localStorage['sawHint'] = -1;
+        localStorage['selectedLanguage']=""
         document.addEventListener("DOMContentLoaded", () => {
             const nextButton = document.querySelector('.icon');
             const nameVal = document.getElementById('name');
