--- a/instructions.html
+++ b/instructions.html
@@ -136,7 +136,7 @@
       </div>
 
 
-<img class="button-next" alt="" src="assets/img/group-6.svg" />
+<!-- <img class="button-next" alt="" src="assets/img/group-6.svg" /> -->
       <div class="icon">
         <div class="circle1">
           <div class="circle2">
