--- a/instructions.html
+++ b/instructions.html
@@ -35,9 +35,9 @@
       <div class="select-a-language">SELECT A LANGUAGE FOR QUESTIONS</div>
 
       <div class="button-lang">
-        <button class="button-1" onclick="changeColor(this)">C++</button>
-        <button class="button-2" onclick="changeColor(this)">Java</button>
-       <button class="button-3" onclick="changeColor(this)">Python</button>
+        <button class="button-1" >C++</button>
+        <button class="button-2" >Java</button>
+       <button class="button-3" >Python</button>
       </div>
 
       <div class="line-vertical-slang"></div>
@@ -149,7 +149,7 @@
       let selectedLanguage = ``;
       const button1 = document.querySelector('.button-1');
       const button2 = document.querySelector('.button-2');
-      // const button3 = document.querySelector('.button-3');
+      const button3 = document.querySelector('.button-3');
 
       button1.addEventListener('click', () => {
         localStorage['selectedLanguage']="cpp"
